Fixed: '[top navigation] Home, Contact Us, and Jobseekers is also not aligned. These are two pixels too high'

--- a/css/altres.css
+++ b/css/altres.css
@@ -247,7 +247,7 @@ h4 {
 #tertiary-links {
 	text-align: center;
 	position: absolute;
-	bottom: 14.6px;
+	bottom: 13px;
 	font-size: 11px;
 	font-weight: 300;
 	width: 240px;
